[package]
name = "social-media-post-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.15"
aws-sdk-dynamodb = "1.63.0"
aws-sdk-s3 = "1.72.0"
lambda_http = "0.14.0"
openssl = {version = "0.10.68", features = ["vendored"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = "0.12.9"
tokio = { version = "1", features = ["macros"] }
uuid = {version = "1.12.1", features = ["v4"] }